Sidebar scrollbar 1px offset fix

--- a/code/layout.sass
+++ b/code/layout.sass
@@ -288,6 +288,7 @@ header, .tile
 	overflow-y: auto
 	overflow-x: hidden
 	direction: rtl
+	padding-block: 1px
 	> div
 		direction: ltr
 	.sidebar > &
